fix(grid wrap): ensure grid wraps that are nested in flex items occupy full width

--- a/scss/core/tools/mixins/components/grid/_grid-wraps.scss
+++ b/scss/core/tools/mixins/components/grid/_grid-wraps.scss
@@ -42,6 +42,7 @@
   @if $use-flexbox-grid {
     display: flex;
     flex-wrap: wrap;
+    flex: 1;
   }
 }
 
